# counter_qml

./: CMakeLists.txt  Main.qml  README.md  flake.nix  metadata.json
nix/: app.nix  lib.nix
